Actions
Bug #4553
closedndmp_config_get_ext_list failed
Start date:
2014-01-31
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
NDMP
Gerrit CR:
Description
When NBU (netbackup) restore is run, restore fails and in log is:
16:29:39.843 [4144.4920] <16> NDMP MSG: ndmp_enable_extensions: ndmp_config_get_ext_list failed. status = 30 (NDMP_EXT_DANDN_ILLEGAL_ERR) 16:29:39.843 [4144.4920] <16> NDMP MSG: ndmp_authenticate_connection: ndmp_enable_extensions failed 16:29:49.000 [4144.4920] <16> NDMP MSG: ndmp_enable_extensions: ndmp_config_get_ext_list failed. status = 30 (NDMP_EXT_DANDN_ILLEGAL_ERR) 16:29:49.000 [4144.4920] <16> NDMP MSG: ndmp_authenticate_connection: ndmp_enable_extensions failed
According to spec our NDMP get/set extension list should work in following way:
- get ext list should be issued before set ext list
- set ext list can be issued after get ext list and no more than once
In addition to that our implementation should allow set with empty extension list even if it doesn't support any extensions.
Updated by Jan Kryl over 8 years ago
- Status changed from New to In Progress
- % Done changed from 0 to 100
Updated by Jan Kryl over 8 years ago
- Status changed from In Progress to Pending RTI
Updated by Electric Monk over 8 years ago
git commit 5bc1e22263da29a716575a856dd867c1f58f4a8b
Author: Albert Lee <trisk@nexenta.com> 4553 ndmp_config_get_ext_list failed Reviewed by: Jan Kryl <jan.kryl@nexenta.com> Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Reviewed by: Dan McDonald <danmcd@omniti.com> Approved by: Garrett D'Amore <garrett@damore.org>
Updated by Robert Mustacchi over 8 years ago
- Status changed from Pending RTI to Resolved
Actions