4553 ndmp_config_get_ext_list failed Reviewed by: Jan Kryl <jan.kryl@nexenta.com> Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Reviewed by: Dan McDonald <danmcd@omniti.com> Approved by: Garrett D'Amore <garrett@damore.org>